--- a/kafka-connect-bigtable-sink/sink/pom.xml
+++ b/kafka-connect-bigtable-sink/sink/pom.xml
@@ -79,7 +79,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>${maven-build-helper.version}</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
