--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Spotless
-        run: mvn -f kafka-connect-bigtable-sink -B -ntp spotless:check
+        working-directory: kafka-connect-bigtable-sink
+        run: mvn -B -ntp spotless:check
       - name: Unit tests
         run: mvn -f kafka-connect-bigtable-sink -B -ntp clean test
       - name: Push to GitHub Maven
